Add tests and move them to junit